--- a/aipage/index.html
+++ b/aipage/index.html
@@ -58,12 +58,6 @@
             margin: 0
         }
 
-        p.lead {
-            margin: 4px 0 0;
-            color: var(--muted);
-            font-size: 13px
-        }
-
         .card {
             background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.01));
             border-radius: 14px;
@@ -112,12 +106,6 @@
             min-height: 80px
         }
 
-        footer {
-            margin-top: 12px;
-            color: var(--muted);
-            font-size: 13px
-        }
-
         @media (max-width:640px) {
             form.row {
                 grid-template-columns: 1fr
@@ -135,8 +123,7 @@
         <header>
             <div class="logo">AI</div>
             <div>
-                <h1>AI Text generator </h1>
-
+                <h1>AI Text generator</h1>
             </div>
         </header>
 
@@ -149,8 +136,6 @@
             </form>
 
             <div id="responseArea" class="resp">AI generated text...</div>
-
-            <footer></footer>
         </div>
     </div>
 
@@ -168,7 +153,7 @@
             }
 
             sendBtn.disabled = true;
-            responseArea.innerHTML = "⏳ Generating";
+            responseArea.innerHTML = "⏳ Generating...";
 
             try {
                 const res = await fetch("https://demo-api-backend.onrender.com/generate?prompt=" + encodeURIComponent(prompt), {
@@ -187,37 +172,6 @@
             }
 
             sendBtn.disabled = false;
-        });
-        e.preventDefault();
-
-        const prompt = document.getElementById("prompt").value;
-        const responseArea = document.getElementById("responseArea");
-        const sendBtn = document.getElementById("send");
-
-        if (!prompt.trim()) {
-            responseArea.innerHTML = "⚠️ Please Enter a Prompt";
-            return;
-        }
-
-        sendBtn.disabled = true;
-        responseArea.innerHTML = "⏳ Generating";
-
-        try {
-            const res = await fetch("http://127.0.0.1:8000/generate?prompt=" + encodeURIComponent(prompt), {
-                method: "POST"
-            });
-            const data = await res.json();
-
-            if (data.response) {
-                responseArea.innerHTML = data.response;
-            } else {
-                responseArea.innerHTML = "⚠️ Error: " + JSON.stringify(data);
-            }
-        } catch (err) {
-            responseArea.innerHTML = "Error: " + err;
-        }
-
-        sendBtn.disabled = false;
         });
     </script>
 </body>
